--- a/templates/index.html
+++ b/templates/index.html
@@ -668,6 +668,7 @@
       });
   
       initializeMap();
+      loadNearbyParks();
       updateSummary();
       updateNearbyButtonLabel();
       enforceAnyCheckboxRules();
