--- a/templates/results.html
+++ b/templates/results.html
@@ -195,7 +195,7 @@
   <script>
     let map;
     let parkMarkers = [];
-    let currentPageGroup = 1;
+
     const parkData = {{ activity_parks | tojson }};
 
     function renderMapMarkers(parkData) {
@@ -227,12 +227,11 @@
       button.disabled = true;
       button.innerText = 'Loading...';
 
-      currentPageGroup += 1;
-
+      // Fetch the updated activities
       const res = await fetch('/load_more', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ page_group: currentPageGroup })
+        body: JSON.stringify({ first_page: {{ session.first_page }} })
       });
 
       button.disabled = false;
@@ -244,8 +243,8 @@
       }
 
       const data = await res.json();
-      const container = document.getElementById('results-container');
 
+      const container = document.getElementById('results-container');
       data.activities.forEach(activity => {
         const card = document.createElement('div');
         card.className = 'activity-card';
